tests/expectations/compiler/array/array_slices_fail.out
Error [ETYC0372156]: The start index `0` must be strictly less than the end index `0`.
    --> compiler-test:3:19
     |
   3 |         let b = a[0..0];
     |                   ^
